manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-new-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
      annotations:
        cni.projectcalico.org/podIP: "10.244.0.28/32"
    spec:
      serviceAccountName: my-service-account
      containers:
      - name: my-container
        image: nikitha2109/nikithaimage:1.0.1
        ports:
        - containerPort: 80
      tolerations:
      - key: "pod"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        podAntiAffinity:  # Add Pod anti-affinity rule
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - myapp
            topologyKey: "kubernetes.io/hostname"
