manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: bhanutejanewdotnet 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bhanutejanewdotnet
  template:
    metadata:
      labels:
        app: bhanutejanewdotnet 
    spec:
      containers:
        - name: bhanutejanewdotnet 
          image: bhanu.azurecr.io/bhanutejanewdotnet
          ports:
          - containerPort: 5000
