manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetdemoservice
  namespace: nv1
spec:
  selector:
    app: new-docker-app
  type: LoadBalancer
  sessionAffinity: None
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 5000
