manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bhanuteja822-network-policy
  namespace: nv1
spec:
  podSelector:
    matchLabels:
      app: bhanuteja822
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: {}
